@@ -24,6 +24,7 @@ point8[2] =  3.0
 point8[1:3] =  [2,3]
 point8[:] =  [1,2,3,4,5]
 point8 =  [1,88,99,4,5]
+point8 =  [9,9,9,9,9]
 Equality ?  True
 pt =  [-3,-5,6]
 pt[-1]= 6.0
